--- a/data/index.html
+++ b/data/index.html
@@ -12,26 +12,31 @@
     <div class="wrapper">
         <div class="tile" id="temperature" title="Greenhouse Temperature">
             <span class="icon-box">
-                <img src="/temp.svg" alt="Thermometer icon" class="icon">
+                <img src="img/temp.svg" alt="Thermometer icon" class="icon">
             </span>
             <div class="text" id="temp-text">
-                <span>%TEMP%</span>&deg;C
+                <span>20</span>&deg;C
             </div>
         </div>
         <div class="tile" id="humidity" title="Greenhouse relative humidity">
             <span class="icon-box">
-                <img src="/drop.svg" alt="Waterdrop icon" class="icon">
+                <img src="img/drop.svg" alt="Waterdrop icon" class="icon">
             </span>
             <div class="text" id="humidity-text">
-                <span>%HUMIDITY%</span>&percnt;
+                <span>100</span>&percnt;
             </div>
         </div>
-        <div class="tile" id="soil_humidity" title="Greenhouse soil relative humidity">
+        <div class="tile double" id="soil_humidity" title="Greenhouse soil relative humidity">
             <span class="icon-box">
-                <img src="/drop.svg" alt="Waterdrop icon" class="icon">
+                <img src="img/plant_water.svg" alt="Waterdrop icon" class="icon">
             </span>
-            <div class="text" id="soil-text">
-                <span>%SOIL%</span>&percnt;
+            <div class="text-container">
+                <span class="text top-row" id="soil-text">
+                    Soil Moisture: 864
+                </span>
+                <span class="text bottom-row" id="soil-text">
+                    Pump: ON
+                </span>
             </div>
         </div>
     </div>
