Added pump switch

--- a/PlatformIO/data/index.html
+++ b/PlatformIO/data/index.html
@@ -36,7 +36,10 @@
                     Soil Moisture: <span>%SOIL%</span>
                 </span>
                 <span class="text bottom-row">
-                    Pump: <span>%PUMP%</span>
+                    Pump Status:   <label class="switch">
+                                <input id="pump-switch" type="checkbox">
+                                <span class="slider round"></span>
+                            </label>
                 </span>
             </div>
         </div>
